# broad-listening-book

./: .gitignore  00_序文.md  00_本書の読みかた.md  01_ブロードリスニングとは何か？.md  02_ブロードリスニングとアンケートの違い、定量分析から定性分析へ.md  03_デジタル民主主義とブロードリスニング、新しい民意の届け方.md  04_01_安野貴博の取り組み.md  04_02_国民民主の国会質問.md  04_03-2_Polisで世論の地図を作る.md  04_03_sumino_日テレ選挙特番.md  04_03_日テレ選挙特番.md  04_04_Polisで世論の地図を作る.md  04_04_朝日新聞の特設記事.md  04_05_朝日新聞の特設記事.md  04_2章の扉.md  04_DD2030による広聴AIの開発活動.md  04_sumino_初期の広聴AI開発.md  04_sumino_広聴AIの開発活動.md  04_日本国内におけるブロードリスニングの広がり.md  05_01_安野貴博の取り組み.md  05_02_国民民主の国会質問.md  05_03-2_Polisで世論の地図を作る.md  05_03_sumino_日テレ選挙特番 .md  05_03_日テレ選挙特番.md  05_04_朝日新聞の特設記事.md  05_日本国内におけるブロードリスニングの広がり.md  05_東京都、シン東京2050、ブロードリスニングによる政策転換.md  06_01_チームみらい.md  06_02_チームみらい2026年衆院選.md  06_02_日本維新の会.md  06_03_国民民主党.md  06_03_日本維新の会.md  06_04_公明党.md  06_04_国民民主党.md  06_05_公明党.md  06_2025年参院選でのブロードリスニングの活用.md  06_国政選挙でのブロードリスニングの利用.md  06_東京都、シン東京2050、ブロードリスニングによる政策転換.md  07_01_チームみらい.md  07_01_熊本県八代市の市長選挙での活用.md  (+82 more)
.claude/: settings.local.json
code/: llm_opinion_analysis.py  political_wordcloud.py  rashomon_wordcloud.py  test_mini_kouchou_ai.py
column/: 1万件の声を集めて気づいたこと.md  AI時代のファシリテーション.md  AI選択の自由という新しい人権.md  AgoraCitizenNetwork.md  collective_actionとconnective_action.md  パブリックコメントと向き合う大企業AI_富士通の取り組み.md  ブロードリスニングとしてみたときのパブリックコメントの問題点.md  ブロードリスニングの限界とガードレール.md  レビューで試す広聴AI.md  ワードクラウドは分析ではない.md  公共財とデジタル公共財.md  安全な共感.md  安全な共感_v2.md
en/: 00_how_to_read_this_book.md  00_preface.md  01_what_is_broad_listening.md  02_broad_listening_vs_surveys.md  03_digital_democracy_and_new_public_voice.md  (+36 more)
(+187 files in other folders)
