[project]
name = "broad-listening-book"
version = "0.1.0"
description = "ブロードリスニング書籍の原稿管理"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5",
    "playwright>=1.40",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.scripts]
build-pdf = "scripts.build_pdf:main"
